WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284828
Fix CLoop build after
284499@main
and unsafe-buffer-usage
https://bugs.webkit.org/show_bug.cgi?id=284828
Summary
Fix CLoop build after 284499@main and unsafe-buffer-usage
Keith Miller
Reported
2024-12-17 10:39:00 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2024-12-17 10:39:01 PST
<
rdar://problem/141567643
>
Keith Miller
Comment 2
2024-12-17 11:08:18 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38083
EWS
Comment 3
2024-12-18 03:03:03 PST
Committed
287998@main
(be8529be73b6): <
https://commits.webkit.org/287998@main
> Reviewed commits have been landed. Closing PR #38083 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug