Fix CLoop build after 284499@main and unsafe-buffer-usage https://bugs.webkit.org/show_bug.cgi?id=284828 rdar://141567643

Reviewed by Yijia Huang.

ENABLE_C_LOOP now disables all JIT ENABLEs for Cocoa platforms, which fixes the CLoop build.

Also, add a bunch of WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN/ENDs to fix the rest of the build.

* Source/JavaScriptCore/interpreter/CLoopStack.cpp:
* Source/JavaScriptCore/interpreter/CLoopStack.h:
* Source/JavaScriptCore/llint/LowLevelInterpreter.cpp:
* Source/WTF/wtf/PlatformEnableCocoa.h:
* Source/WTF/wtf/StackPointer.cpp:

Canonical link: https://commits.webkit.org/287998@main